<resources>
    <string name="app_name">The Cornellian App</string>
    <string name="editorial_board">Editorial Board</string>
    <string name="feedbackButton">Submit Feedback</string>
    <string name="messageHint">Your message here...</string>
    <string name="namePrompt">Who are you?</string>
    <string name="contactUsTitle">Contact Us!</string>
    <string name="facebookButtonDesc">Image Button to take you to the Cornellian Facebook</string>
    <string name="twitterButtonDesc">Image Button to take you to the Cornellian Twitter</string>
    <string name="websiteButtonDesc">Image Button to take you to the Cornellian Website</string>
    <string name="cornellianHead">Header with Cornellian Text</string>
    <string name="mainButtonText">Main</string>
    <string name="aboutUsButtonText">About Us</string>
    <string name="contactUsButtonText">Contact Us</string>
    <string name="archiveButtonText">Archive</string>
    <string name="introduction">\tThe Cornellian Newspaper is the school newspaper for Cornell College in Mount Vernon, Iowa. It has been in print for over eighty years. It publishes one paper copy each block and will be publishing shorter online articles between the weeks that there is no paper copy. If you have any suggestions or comments you wish to make about the paper, please direct them to the current editor in chief. If you are interested in joining our staff, please contact the current editor in chief.</string>
    <string name="editorHeader">Editorial Board</string>
    <string name="introHeader">Introduction</string>
    <string name="editorialBoard">Editor in Chief: M.E. Scoonover-Nelson\nAssistant Editor in Chief: Angel Fabila\nNews Editor: Matthew McDermott\nFeatures Editor: Emily Maniacci\nArts and Entertainment Editor: Maddie Leman\nOpinion Editor: Sofia Lopera Cordona\nCopy Editor: Alexandra Lewyn\nLayout Editor: Sage Parker</string>
    <string name="archiveButtonText">Archive</string>
    <string name="feedRefreshText">Click to Refresh Feed</string>


    <string-array name="items">
        <item>Home</item>
        <item>About Us</item>
        <item>Contact Us</item>
    </string-array>

    <string-array name="staff">
        <item>Editorial Board</item>
        <item>Editor-in-Chief: M.E. Scoonover-Nelson</item>
        <item>Assistant Editor-in-Chief: Angel Fabila</item>
        <item>News Editor: </item>
        <item>Features Editor: </item>
        <item>Arts and Entertainment Editor: </item>
        <item>Copy Editor: </item>
        <item>Layout Editor: </item>
        <item>Social Media Manager: </item>
        <item>Photographer: </item>
    </string-array>
</resources>
